Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8235

Cannot remove "auto-detected" qt by changing the install settings

XMLWordPrintable

    • af2b39699a308efc7f9579619fdbcba57b0f8c14

      After removing a Qt version from the install settings (install_dir/share/qtcreator/QtProject/qtcreator/qtversion.xml), the Qt version still shows as registered & auto-detected in Qt Creator.

      1. install e.g. qt creator from qt5 installer, or use sdktool to register a qt version
      2. start Qt Creator
      3. close Qt Creator
      4. remove the qt version from install settings (by hand, see QTCREATORBUG-8234)
      5. start Qt Creator

      The Qt version is still there.

        For Gerrit Dashboard: QTCREATORBUG-8235
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes