SDKtool: Fix autodetection sources of Qt versions

Make sure to use autodetection sources (--id) in sdktool that
are actually expected by Creator. Do so by prepending the necessary
magic.

This makes sure that creator will actually remove the SDK Qt versions
again once they get removed by SDKtool.

Task-number: QTCREATORBUG-8235
Change-Id: I8dde1ab1ae192c8f79de9fb9104461e7435237ec
Reviewed-by: Tim Jenssen <tim.jenssen@digia.com>